--- a/.github/actions/config.yml
+++ b/.github/actions/config.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       file:
-        description: 'path of the file you want to change testing change'
+        description: 'path of the file you want to change'
         required: true
         default: ''
 
