--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -61,7 +61,7 @@ jobs:
           
 
       - name: Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}
-        if: ${{ steps.extract_info.outputs.replace == 'replace' }}
+        if: ${{ steps.extract_info.outputs.replace == 'replace' }} && ${{ steps.extract_info.outputs.with == 'with' }}
         run: |
           
             IFS=',' read -ra OLD_WORDS <<< ${{ steps.extract_info.outputs.old_word }}  # Split words by comma
