--- a/.github/workflows/automatedSolution.yml
+++ b/.github/workflows/automatedSolution.yml
@@ -11,10 +11,6 @@
 
 
 
-
-
-
-
 name: Replace Word in File with Git Push
 
 on:
@@ -45,14 +41,14 @@ jobs:
           FILE=$(echo "$MESSAGE" | awk '{print $1}')  
           REPLACE=$(echo "$MESSAGE" | awk '{print $2}') 
           OLD_WORD=$(echo "$MESSAGE" | awk '{print $3}') 
-          WITH=$(echo "$MESSAGE" | awk '{print $4}')
+      
           NEW_WORD=$(echo "$MESSAGE" | awk '{print $5}')
           
 
           echo "::set-output name=file::$FILE"
           echo "::set-output name=old_word::$OLD_WORD"
           echo "::set-output name=new_word::$NEW_WORD"
-          echo "::set-output name=with::$WITH"
+ 
           echo "::set-output name=replace::$REPLACE"
           
           
@@ -65,7 +61,7 @@ jobs:
           
 
       - name: Replace ${{ steps.extract_info.outputs.old_word }} with ${{ steps.extract_info.outputs.new_word }} in ${{ steps.extract_info.outputs.file }}
-        if: ${{ steps.extract_info.outputs.replace == 'replace' }} && ${{ steps.extract_info.outputs.with == 'with' }}
+        if: ${{ steps.extract_info.outputs.replace == 'replace' }}
         run: |
           
             IFS=',' read -ra OLD_WORDS <<< ${{ steps.extract_info.outputs.old_word }}  # Split words by comma
