--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
 
     implementation 'net.sourceforge.htmlunit:htmlunit:2.60.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.postgresql:postgresql'
 }
 
 tasks.named('bootBuildImage') {
