--- a/build.gradle
+++ b/build.gradle
@@ -28,8 +28,9 @@ dependencies {
     implementation 'net.sourceforge.htmlunit:htmlunit:2.60.0'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
 
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.postgresql:postgresql'
+    implementation 'com.google.code.gson:gson:2.8.8'
+    //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    //implementation 'org.postgresql:postgresql'
 }
 
 tasks.named('bootBuildImage') {
