--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
 
     implementation 'com.google.code.gson:gson:2.8.8'
+
+    implementation 'net.sf.py4j:py4j:0.10.9.2'
+
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     //implementation 'org.postgresql:postgresql'
 }
